--- a/Jagger-CLI/Jagger/jagger.xcodeproj/xcshareddata/xcschemes/Jagger.xcscheme
+++ b/Jagger-CLI/Jagger/jagger.xcodeproj/xcshareddata/xcschemes/Jagger.xcscheme
@@ -16,8 +16,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D1E908642DC3617D00B17A48"
-               BuildableName = "Jagger"
-               BlueprintName = "Jagger"
+               BuildableName = "jagger"
+               BlueprintName = "jagger"
                ReferencedContainer = "container:Jagger.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D1E908642DC3617D00B17A48"
-            BuildableName = "Jagger"
-            BlueprintName = "Jagger"
+            BuildableName = "jagger"
+            BlueprintName = "jagger"
             ReferencedContainer = "container:Jagger.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -73,8 +73,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D1E908642DC3617D00B17A48"
-            BuildableName = "Jagger"
-            BlueprintName = "Jagger"
+            BuildableName = "jagger"
+            BlueprintName = "jagger"
             ReferencedContainer = "container:Jagger.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
