--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -12,7 +12,7 @@ on:
   workflow_call:      
  
 env:
-  project_path: xmlsec/Project/xmlsec.4DProject
+  project_path: Jagger/Project/Jagger.4DProject
   startup_method: test
   skip_onstartup: true
   create_data: false
@@ -27,7 +27,7 @@ jobs:
       matrix:
         TOOL4D_PLATFORM: ["windows-latest", "macos-latest"]
         TOOL4D_BRANCH: [20.x]
-        TOOL4D_VERSION: [20.5]
+        TOOL4D_VERSION: [20.6]
         TOOL4D_BUILD: [latest]
     runs-on: ${{ matrix.TOOL4D_PLATFORM }}
     
