--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "xmlsec",
-  "description": "xmlsec",
+  "name": "Jagger",
+  "description": "Jagger",
   "author": [
-    "Aleksey Sanin <aleksey@aleksey.com>",
+    "Naoki Yoshinaga <ynaga@iis.u-tokyo.ac.jp>",
     "Keisuke Miyako <keisuke.miyako@4D.com>"
   ],
   "license": "MIT",
-  "repository": "https://github.com/miyako/xmlsec",
-  "version": "1.0.14",
+  "repository": "https://github.com/miyako/Jagger",
+  "version": "1.0.0",
   "tool": {
     "platform": "macos",
     "branch": "20.x",
-    "version": "20.5",
+    "version": "20.6",
     "build": "latest",
     "arch": "arm"
   }
